# service-auth/handlers/remove.go
@@ -1,7 +1,6 @@
 package handlers
 
 import (
-	"github.com/deissh/api.micro/models"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -9,8 +8,8 @@ import (
 type RemoveRequest struct {
 	// API version
 	Version     string `json:"v" query:"v"`
-	AccessToken string `form:"access_token" binding:"required"`
-	All         bool   `form:"all"`
+	AccessToken string `query:"access_token" binding:"required"`
+	All         bool   `query:"all" binding:"required"`
 }
 
 type RemoveResponse struct {
@@ -29,39 +28,8 @@ type RemoveResponse struct {
 // @Param access_token query string false "user access_token"
 // @Param all query bool false "remove all tokens"
 // @Success 200 {object} handlers.RemoveResponse
-// @Success 400 {object} handlers.ResponseData
 // @Router /token.remove [Get]
 func (h Handler) RemoveHandler(c *gin.Context) {
-	var r RemoveRequest
-	if err := c.Bind(&r); err != nil {
-		c.JSON(http.StatusBadRequest, ResponseData{
-			Status: http.StatusBadRequest,
-			Data:   "Params error",
-		})
-		return
-	}
-
-	var token models.Token
-	if err := h.db.Where(
-		&models.Token{
-			AccessToken: r.AccessToken,
-		},
-	).First(&token).Error; err != nil {
-		c.JSON(http.StatusBadRequest, ResponseData{
-			Status: http.StatusBadRequest,
-			Data:   "Access token not founded",
-		})
-		return
-	}
-	// remove token
-	h.db.Delete(&token)
-
-	if r.All == true {
-		h.db.Where(&models.Token{
-			UserId: token.UserId,
-		}).Delete(models.Token{})
-	}
-
 	c.JSON(http.StatusOK, RemoveResponse{
 		Version: "1",
 		Status:  "ok",
